--- a/data/service.yml
+++ b/data/service.yml
@@ -1,5 +1,5 @@
 enable  : true
-title   : WHAT WE LOVE TO DO
+title   : Над чем я люблю работать
 subtitle: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis porro recusandae non quibusdam iure adipisci.
 image   : images/team.jpg
 serviceItem :
