add weather app, change style

--- a/config.toml
+++ b/config.toml
@@ -69,7 +69,7 @@ summarylength = 25
   # Banner Section
   [params.banner]
     enable                = true
-    background_image      = "images/backgrounds/pngtree-pure-color-watercolor-graffiti-gradient-background-board-design-board-design-image_66713.jpeg"
+    background_image      = "images/backgrounds/Untitled_Artwork 2.jpg"
     heading               = "упакую твой бренд в красивую обертку"
     tagline               = "Я Frontend разработчик и Spark AR creator"
     primary_button        = "Смотри мои работы"
